# dsjobs

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-test.yml  lint-test.yml  pypi.yml  pytest.yml
docs/dsjobs/: dir.html  index.html  jobs.html
dsjobs/: __init__.py  dir.py  jobs.py
example-notebooks/: papermill-mpm.ipynb  template-mpm-run.ipynb
tests/: test_dir_uri.py  test_job_gen_jobinfo.py  test_job_get_archive_path.py  test_job_runtime.py  test_job_status.py  test_jobs.py
